--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,14 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
+  assets:
+    - assets/branch/ripley.png
+    - assets/branch/falabella.png
+    - assets/branch/topitop.png
+    - assets/branch/oeschle.png
+    - assets/branch/h&m.png
+    - assets/branch/estilos.png
+
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
