--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,9 +33,12 @@ dependencies:
 
 
   # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   http: ^1.2.2
+  logger: ^2.4.0
+  jwt_decoder: ^2.0.1
+  flutter_secure_storage: ^9.2.2
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
