--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,12 @@ dependencies:
   path_provider: ^2.1.5
   cached_network_image: ^3.4.1
 
+  #firebase
+  firebase_core: ^1.18.0
+  firebase_database: ^9.0.1
+  flutter_map: ^7.0.2
+  latlong2: ^0.9.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
